--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
           <h1><span>Clarusway </span> Web Design</h1>
         </section>
         <section>
-          <a href="home.html">HOME</a>
+          <a href="index.html">HOME</a>
           <a href="about.html" class="active">ABOUT</a>
           <a href="services.html">SERVİCES</a>
         </section>
