--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
         <h1><span>Clarusway </span> Web Design</h1>
       </section>
       <section>
-        <a href="home.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="services.html" class="active">SERVİCES</a>
       </section>
