--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./index.html" />
     <title>home</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
           <h1><span>Clarusway </span> Web Design</h1>
         </section>
         <section>
-          <a href="home.html" class="active">HOME</a>
+          <a href="index.html" class="active">HOME</a>
           <a href="about.html">ABOUT</a>
           <a href="services.html">SERVİCES</a>
         </section>
